# Polar_Emotibit_Analyzer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  run.sh
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/routes/: analysis.py  validate.py
backend/app/core/: config.py
backend/app/db/: models.py
backend/app/models/: signals.py
backend/app/schemas/: analysis.py
backend/app/services/ai/: adapters.py
backend/app/services/ingestion/: parsers.py  synthetic.py
backend/app/services/processing/: benchmark.py  clean.py  drift.py  extended_analytics.py  features.py  kubios_benchmark.py  pipeline.py  statistics.py  stress.py  sync.py  sync_qc.py
backend/app/services/reporting/: exporters.py  report_builder.py
backend/tests/: test_api.py  test_features.py  test_parsers.py  test_real_data_audit.py
contracts/: EXPORT_FORMAT_CONTRACT_2026-04-22.md  HRV_FEATURE_CONTRACT_2026-04-22.md  NON_DIAGNOSTIC_CONTRACT_2026-04-22.md  PIPELINE_SCOPE_CONTRACT_2026-04-22.md  README.md  STRESS_COMPOSITE_CONTRACT_2026-04-22.md  SYNC_QC_CONTRACT_2026-04-22.md
docs/: EXECUTION_LOG_2026-04-20.md  FIX_PLAN_2026-04-21.md  GDOCS_SOURCE_MANAGEMENT.md  GUI_SCOPE_FILE_ONLY_2026-04-20.md  HEURISTICS_APPLIED_2026-04-20.md  INTEGRATION_PLAN_WITH_SIBLING_REPO_2026-04-20.md  POLAR_H10_REFERENCE_DATA_AND_PAPER_2026-04-20.md  README.md  RUTHLESS_AUDIT_2026-04-21_CW.md  RUTHLESS_REVIEW_AUDIT_2026-04-20.md  RUTHLESS_REVIEW_EXECUTION_2026-05-01.md  RUTHLESS_REVIEW_PROMPT_2026-05-01.md  RUTHLESS_REVIEW_PROMPT_FOR_CODEX_2026-04-20.md  RUTHLESS_TEST_PROMPT_2026-04-20.md  (+4 more)
(+22 files in other folders)
